--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   http: ^0.13.5
+  flutter_svg: ^2.0.7
+  intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,10 +68,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/bottom_bar/home.svg
+    - lib/assets/bottom_bar/search.svg
+    - lib/assets/bottom_bar/bag.svg
+    - lib/assets/bottom_bar/profile.svg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
